@@ -36,8 +36,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.management.DynamicMBean;
 import jdk.management.HotSpotAOTCacheMXBean;
 import jdk.management.VirtualThreadSchedulerMXBean;
@@ -50,15 +48,13 @@ public final class PlatformMBeanProviderImpl extends PlatformMBeanProvider {
         "com.sun.management:type=DiagnosticCommand";
 
     private final List<PlatformComponent<?>> mxbeanList;
-    private static HotSpotDiagnostic hsDiagMBean = null;
-    private static OperatingSystemMXBean osMBean = null;
 
     static {
        System.loadLibrary("management_ext");
     }
 
     public PlatformMBeanProviderImpl() {
-        mxbeanList = Collections.unmodifiableList(init());
+        mxbeanList = List.copyOf(init());
     }
 
     @Override
@@ -72,19 +68,18 @@ public final class PlatformMBeanProviderImpl extends PlatformMBeanProvider {
          * Garbage Collector in the Java virtual machine.
          */
         initMBeanList.add(new PlatformComponent<MemoryManagerMXBean>() {
-            private final Set<String> garbageCollectorMXBeanInterfaceNames
-                    = Collections.unmodifiableSet(
-                            Stream.of("java.lang.management.MemoryManagerMXBean",
-                                    "java.lang.management.GarbageCollectorMXBean",
-                                    "com.sun.management.GarbageCollectorMXBean")
-                            .collect(Collectors.toSet()));
+            private final Set<String> garbageCollectorMXBeanInterfaceNames = Set.of(
+                    "java.lang.management.MemoryManagerMXBean",
+                    "java.lang.management.GarbageCollectorMXBean",
+                    "com.sun.management.GarbageCollectorMXBean"
+            );
 
             @Override
             public Set<Class<? extends MemoryManagerMXBean>> mbeanInterfaces() {
-                return Stream.of(MemoryManagerMXBean.class,
+                return Set.of(
+                        MemoryManagerMXBean.class,
                         java.lang.management.GarbageCollectorMXBean.class,
-                        com.sun.management.GarbageCollectorMXBean.class)
-                        .collect(Collectors.toSet());
+                        com.sun.management.GarbageCollectorMXBean.class);
             }
 
             @Override
@@ -125,18 +120,17 @@ public final class PlatformMBeanProviderImpl extends PlatformMBeanProvider {
          * Threading system of the Java virtual machine.
          */
         initMBeanList.add(new PlatformComponent<java.lang.management.ThreadMXBean>() {
-            private final Set<String> threadMXBeanInterfaceNames
-                    = Collections.unmodifiableSet(
-                            Stream.of("java.lang.management.ThreadMXBean",
-                                    "com.sun.management.ThreadMXBean")
-                            .collect(Collectors.toSet()));
+            private final Set<String> threadMXBeanInterfaceNames = Set.of(
+                    "java.lang.management.ThreadMXBean",
+                    "com.sun.management.ThreadMXBean");
+
             private ThreadMXBean threadMBean = null;
 
             @Override
             public Set<Class<? extends java.lang.management.ThreadMXBean>> mbeanInterfaces() {
-                return Stream.of(java.lang.management.ThreadMXBean.class,
-                        com.sun.management.ThreadMXBean.class)
-                        .collect(Collectors.toSet());
+                return Set.of(
+                        java.lang.management.ThreadMXBean.class,
+                        com.sun.management.ThreadMXBean.class);
             }
 
             @Override
@@ -234,19 +228,17 @@ public final class PlatformMBeanProviderImpl extends PlatformMBeanProvider {
          * OperatingSystemMXBean
          */
         initMBeanList.add(new PlatformComponent<OperatingSystemMXBean>() {
-            private final Set<String> operatingSystemMXBeanInterfaceNames
-                    = Collections.unmodifiableSet(
-                            Stream.of("java.lang.management.OperatingSystemMXBean",
-                                    "com.sun.management.OperatingSystemMXBean",
-                                    "com.sun.management.UnixOperatingSystemMXBean")
-                            .collect(Collectors.toSet()));
+            private final Set<String> operatingSystemMXBeanInterfaceNames = Set.of(
+                    "java.lang.management.OperatingSystemMXBean",
+                    "com.sun.management.OperatingSystemMXBean",
+                    "com.sun.management.UnixOperatingSystemMXBean");
 
             @Override
             public Set<Class<? extends OperatingSystemMXBean>> mbeanInterfaces() {
-                return Stream.of(java.lang.management.OperatingSystemMXBean.class,
+                return Set.of(
+                        java.lang.management.OperatingSystemMXBean.class,
                         com.sun.management.OperatingSystemMXBean.class,
-                        com.sun.management.UnixOperatingSystemMXBean.class)
-                        .collect(Collectors.toSet());
+                        com.sun.management.UnixOperatingSystemMXBean.class);
             }
 
             @Override
@@ -335,17 +327,17 @@ public final class PlatformMBeanProviderImpl extends PlatformMBeanProvider {
         return initMBeanList;
     }
 
-    private static synchronized HotSpotDiagnosticMXBean getDiagnosticMXBean() {
-        if (hsDiagMBean == null) {
-            hsDiagMBean = new HotSpotDiagnostic();
+    private static HotSpotDiagnosticMXBean getDiagnosticMXBean() {
+        final class Holder {
+            static final HotSpotDiagnostic HS_DIAG_MBEAN = new HotSpotDiagnostic();
         }
-        return hsDiagMBean;
+        return Holder.HS_DIAG_MBEAN;
     }
 
-    private static synchronized OperatingSystemMXBean getOperatingSystemMXBean() {
-        if (osMBean == null) {
-            osMBean = new OperatingSystemImpl(ManagementFactoryHelper.getVMManagement());
+    private static OperatingSystemMXBean getOperatingSystemMXBean() {
+        final class Holder {
+            static final OperatingSystemMXBean OS_MBEAN = new OperatingSystemImpl(ManagementFactoryHelper.getVMManagement());
         }
-        return osMBean;
+        return Holder.OS_MBEAN;
     }
 }
